@@ -1,5 +1,6 @@
-XXXX-XX-XX      XXXXXX  New UK allocations;
-                        Use libphonenumber's data for N::P::Country
+2011-10-29      1.9     New UK allocations;
+                        Use libphonenumber's data for N::P::Country;
+                        Use libphonenumber's data for N::P::NANP areanames
 
 2011-08-18      1.8006  Add South Sudan (SS, +211) to N::P::Country;
                         New UK allocations
